--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,35 @@
 *.userosscache
 *.sln.docstates
 
+crashlytics-build.properties
+*.apk	
+*.unitypackage
+*.pidb.meta	
+*.pdb.meta	
+*.mdb.meta
+*.booproj	
+*.svd	
+*.pdb	
+*.mdb
+*.user	
+*.userprefs
+ExportedObj/	
+.consulo/	
+*.csproj	
+*.unityproj	
+*.sln	
+*.suo
+.gradle/	
+[Aa]ssets/Plugins/Editor/JetBrains*
+!/[Aa]ssets/**/*.meta
+# /[Aa]ssets/AssetStoreTools*
+/[Ll]ibrary/	
+/[Tt]emp/	
+/[Oo]bj/	
+/[Bb]uild/	
+/[Bb]uilds/	
+/[Ll]ogs/	
+/[Mm]emoryCaptures
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -30,6 +59,13 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+[Ll]ibrary/	
+/[Tt]emp/	
+/[Oo]bj/	
+/[Bb]uild/	
+/[Bb]uilds/	
+/[Ll]ogs/	
+/[Mm]emoryCaptures/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
